--- a/Frontend/src/assets/styles/cmps/_AsideMenu.scss
+++ b/Frontend/src/assets/styles/cmps/_AsideMenu.scss
@@ -32,11 +32,11 @@
         content: '';
         position: absolute;
         top: 0;
-        left: 2px;
-        width: 32px;
-        height: 32px;
-        background-color: red;
-        opacity: 0.5;
+        left: 0;
+        width: 12px;
+        height: 12px;
+        background-color: $clr9;
+        opacity: 0.75;
         border-radius: 50%;
         animation: grow 0.7s infinite alternate;
         z-index: 1;
