fixed small design in profile

--- a/Frontend/src/assets/styles/views/_UserProfile.scss
+++ b/Frontend/src/assets/styles/views/_UserProfile.scss
@@ -19,7 +19,7 @@
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        min-width: 360px;
+        // min-width: 360px;
         height: fit-content;
         padding: 30px;
         background-color: $clrPrimary1;
