--- a/Frontend/src/assets/styles/views/_UserProfile.scss
+++ b/Frontend/src/assets/styles/views/_UserProfile.scss
@@ -7,8 +7,6 @@
   }
 
   .user-profile {
-    display: flex;
-    flex-direction: row;
     justify-content: space-between;
     max-width: 1240px;
 
@@ -19,7 +17,6 @@
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        // min-width: 360px;
         height: fit-content;
         padding: 30px;
         background-color: $clrPrimary1;
@@ -56,24 +53,16 @@
           }
 
           .background {
-            width: 100%;
-            height: 100%;
-            position: relative;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            top: -105%;
-            left: 0%;
-            svg{
+            display: none;
+
+            svg {
               position: relative;
             }
-            display: none;
           }
         }
 
         .stars {
-          display: flex;
-          align-items: center;
+          align-items: baseline;
           margin-block-end: 1.25em;
 
           .rating {
@@ -112,7 +101,6 @@
             margin-block-end: 1em;
 
             .data {
-              display: flex;
               align-items: center;
 
               span {
@@ -200,7 +188,6 @@
         }
 
         .the-skills {
-          display: flex;
           color: $clrSecondary6;
           margin-block-start: 1em;
           flex-wrap: wrap;
@@ -227,14 +214,10 @@
         }
 
         .the-educations {
-          display: flex;
-          flex-direction: column;
           color: $clrSecondary6;
           margin-block-start: 1em;
 
           .education {
-            display: flex;
-            flex-direction: column;
             margin-block-end: 0.625em;
 
             :nth-child(2) {
