created a mobile nav bar

--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -13,6 +13,7 @@
 // Components
 @import "cmps/AppHeader";
 @import "cmps/AppFooter";
+@import "cmps/MobileFooter";
 @import "cmps/WelcomeSection";
 @import "cmps/SearchBar";
 @import "cmps/LoginSignup";
