Moved access icon to svgService

--- a/Frontend/src/assets/styles/cmps/_AppFooter.scss
+++ b/Frontend/src/assets/styles/cmps/_AppFooter.scss
@@ -47,6 +47,7 @@
             width: 32px;
             height: 32px;
             cursor: pointer;
+            align-self: center;
 
             .circle-wrapper {
                 fill: $clrSecondary1;
