--- a/Frontend/src/assets/styles/cmps/_MobileFooter.scss
+++ b/Frontend/src/assets/styles/cmps/_MobileFooter.scss
@@ -14,7 +14,7 @@
   a {
     display: flex;
     justify-content: center;
-    &.active {
+    &.selected {
       svg {
         fill: $bgColor3;
       }
