--- a/Frontend/src/assets/styles/cmps/_AppFooter.scss
+++ b/Frontend/src/assets/styles/cmps/_AppFooter.scss
@@ -1,4 +1,4 @@
-.app-footer {
+.desktop-footer {
     color: $clrSecondary7;
     text-align: center;
     position: relative;
@@ -70,6 +70,32 @@
                     fill: $clrSecondary8;
                 }
             }
+        }
+    }
+}
+
+.mobile-footer {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    grid-template-columns: repeat(5, 1fr);
+    background-color: $clrPrimary1;
+    padding: 1em 0;
+
+    a {
+        display: flex;
+        justify-content: center;
+
+        &.selected {
+            svg {
+                fill: $bgColor3;
+            }
+        }
+
+        svg {
+            width: 1.5em;
+            height: 1.5em;
         }
     }
 }
