--- a/Frontend/src/assets/styles/cmps/_AppFooter.scss
+++ b/Frontend/src/assets/styles/cmps/_AppFooter.scss
@@ -87,7 +87,7 @@
         display: flex;
         justify-content: center;
 
-        &.selected {
+        &.active {
             svg {
                 fill: $bgColor3;
             }
