--- a/Frontend/src/assets/styles/cmps/_AppFooter.scss
+++ b/Frontend/src/assets/styles/cmps/_AppFooter.scss
@@ -80,10 +80,14 @@
     bottom: 0;
     left: 0;
     grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 1fr;
     background-color: $clrPrimary1;
-    padding: 1em 0;
+    padding: 0.5em 0 1em 0;
+    border-top: 1px solid $clrSecondary2;
+    justify-items: center;
 
     a {
+        min-width: 48px;
         display: flex;
         justify-content: center;
 
@@ -91,6 +95,9 @@
             svg {
                 fill: $bgColor3;
             }
+
+            background: $clrSecondary14;
+            border-radius: 0.5em;
         }
 
         svg {
