--- a/Frontend/src/assets/styles/cmps/_ReviewBreakdown.scss
+++ b/Frontend/src/assets/styles/cmps/_ReviewBreakdown.scss
@@ -7,7 +7,6 @@
     font-weight: 700;
 
     .stars {
-      display: flex;
       align-items: baseline;
 
       svg {
@@ -27,7 +26,6 @@
       width: 50%;
 
       .stat-line {
-        display: flex;
         align-items: center;
         justify-content: space-between;
         height: 2em;
@@ -38,12 +36,11 @@
         }
 
         .rate-level {
-          display: flex;
-          padding: 0.375em;
           font-weight: bold;
 
           &:hover {
             background-color: $clrSecondary10;
+            border-radius: 0.25em;
           }
         }
 
@@ -84,7 +81,6 @@
       }
 
       .rating-stat {
-        display: flex;
         justify-content: space-between;
         margin-block-end: 0.5em;
 
@@ -93,7 +89,6 @@
         }
 
         .star {
-          display: flex;
           align-items: center;
           font-weight: 400;
 
