working on mobile-filter

--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -14,6 +14,7 @@
 @import "cmps/AppHeader";
 @import "cmps/AppFooter";
 @import "cmps/MobileFooter";
+@import "cmps/MobileFilter";
 @import "cmps/WelcomeSection";
 @import "cmps/SearchBar";
 @import "cmps/LoginSignup";
