--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -134,7 +134,7 @@
           padding: 0.75em 0.75em 0em 0.75em;
 
           .buyer-order {
-            grid-template-columns: auto 1fr 1fr;
+            grid-template-columns: 90px 1fr 1fr;
             grid-template-rows: auto auto;
             gap: 16px;
             margin-bottom: 16px;
@@ -151,12 +151,12 @@
 
             .order-image {
               grid-column: 1 / 2;
-              grid-row: 1 / 3;
+              grid-row: 1 / -1;
 
               img {
                 margin-block-start: 0.375em;
-                width: 80px;
-                height: 60px;
+                width: 90px;
+                height: 80px;
                 object-fit: cover;
               }
             }
