--- a/Frontend/src/assets/styles/cmps/_GigFilter.scss
+++ b/Frontend/src/assets/styles/cmps/_GigFilter.scss
@@ -15,11 +15,11 @@
   .explore-category {
     padding: 0.75em 0;
     color: $clrSecondary8;
-    a{
+    a {
       display: flex;
       align-items: center;
-      i{
-        display:block;
+      i {
+        display: block;
       }
     }
 
@@ -43,6 +43,23 @@
   padding-block-start: 1em;
 
   .floating-top-bar {
+    .btn-mobile-filter {
+      display: grid;
+      grid-auto-flow: column;
+      gap: 0.5em;
+      align-items: center;
+      border: 1px solid $clrSecondary10;
+      border-radius: rem(8px);
+      color: $clrPrimary2;
+      font-weight: 600;
+      font-size: 1rem;
+      background: none;
+      padding: rem(12px) rem(16px);
+      transition: border-color 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
+      &:hover {
+        border-color: $clrPrimary2;
+      }
+    }
     .floating-menu {
       position: relative;
     }
