--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -26,6 +26,7 @@
 @import "cmps/ReviewBreakdown";
 @import "cmps/GigReviews";
 @import "cmps/ShareGigModal";
+@import "cmps/InvoiceModal";
 
 @import "cmps/GigFilter";
 @import "cmps/MobileFilter";
