buyer-orders style renaming

--- a/Frontend/src/assets/styles/cmps/_AsideMenu.scss
+++ b/Frontend/src/assets/styles/cmps/_AsideMenu.scss
@@ -156,8 +156,8 @@
             .MuiAccordionDetails-root {
               padding: 0;
 
-              .buyer-orders-dropdown {
-                .buyer-orders {
+              .buyer-orders-list {
+                .list-contents {
 
                   .buyer-order {
                     margin-bottom: 1em;
