--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -112,7 +112,7 @@
         font-family: 'macan-regular';
       }
 
-      .buyer-orders-dropdown {
+      .buyer-orders-list {
         position: absolute;
         top: 72px;
         right: 7.5%;
@@ -126,7 +126,7 @@
         max-width: 400px;
         max-height: 350px;
 
-        .buyer-orders {
+        .list-contents {
           overflow-y: scroll;
           padding: 0.75em 0.75em 0em 0.75em;
 
