--- a/Frontend/src/assets/styles/cmps/_GigFilter.scss
+++ b/Frontend/src/assets/styles/cmps/_GigFilter.scss
@@ -15,9 +15,11 @@
   .explore-category {
     padding: 0.75em 0;
     color: $clrSecondary8;
+
     a {
       display: flex;
       align-items: center;
+
       i {
         display: block;
       }
@@ -56,14 +58,17 @@
       background: none;
       padding: rem(12px) rem(16px);
       transition: border-color 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
-      i{
-        width: 1em;
-        height: 1em;
-      }
+
+      // i {
+      //   width: 1em;
+      //   height: 1em;
+      // }
+
       &:hover {
         border-color: $clrPrimary2;
       }
     }
+
     .floating-menu {
       position: relative;
     }
